# src/routes/storeRoute.js
@@ -1,7 +1,8 @@
 import express from "express"
 import asyncHandler from "express-async-handler"
-import { storeRegister } from "../controllers/storeController.js"
+import { reviewCreate, storeRegister } from "../controllers/storeController.js"
 
 export const storeRoute = express.Router()
 
 storeRoute.post("/", asyncHandler(storeRegister))
+storeRoute.post("/reviews", asyncHandler(reviewCreate))
